candle-einops-macros/tests/ui/fail/einsum-invalid-label.rs
use candle_einops_macros::einsum;

fn main() {
    let _ = einsum!("row column$ -> row", ());
}
