candle-einops-macros/tests/ui/fail/einsum-invalid-label.stderr
error: invalid einsum axis label `column$`
 --> tests/ui/fail/einsum-invalid-label.rs:4:21
  |
4 |     let _ = einsum!("row column$ -> row", ());
  |                     ^^^^^^^^^^^^^^^^^^^^
